--- a/css/style.css
+++ b/css/style.css
@@ -53,13 +53,13 @@
   background-size: cover;
   width: auto;
   height: center;
-  display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   height: 1000px;
   width: 100%;
-  align-items: flex-start; }
+  align-items: flex-start;
+  display: flex;
+  justify-content: center; }
 
 h1 {
   padding-bottom: 1rem;
@@ -94,14 +94,14 @@ footer {
   justify-content: center; }
 
 .parrafo {
+  padding-top: 20px;
   display: flex;
-  justify-content: center;
-  padding-top: 20px; }
+  justify-content: center; }
 
 .contenedor__redes {
-  display: flex;
   align-items: center;
   flex-direction: row;
+  display: flex;
   justify-content: center; }
   .contenedor__redes img {
     height: 50px;
@@ -131,10 +131,6 @@ footer {
   margin: 1rem; }
 
 /*hombre*/
-.hombre__1 {
-  display: flex;
-  justify-content: space-between; }
-
 .hombre__1 img {
   height: 300px; }
 
