--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,10 +1,20 @@
+@import "operator";
+
 *{margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     
 }
+/*Movil*/
 
+@media (max-width: 500px ){
+    .title{
+        color: black;
+
+    }
+    
+}
 /*header*/
 
 .logo--imagen{
@@ -17,8 +27,7 @@
 
 .head{ background-color: #B3365B;}
 .navbar__ul{ 
-    display: flex;
-    justify-content: flex-end;
+    @include flex(flex,flex-end)
     
 }
 
@@ -32,9 +41,8 @@
         list-style: none;
     }
     .header__navbar{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        @include flex(flex,space-between);
+        align-items:center;
         }
 
 /*home*/
@@ -61,18 +69,15 @@ display: flex;
         background-size: cover;
         width: auto;
         height: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+    flex-direction: column;
         align-items: center;
         height: 1000px;
         width: 100%; 
-        align-items: flex-start;       
+        align-items: flex-start;
+        @include flex(flex,center);       
     }
 
-        
-        
-        h1{ 
+    h1{ 
             padding-bottom: 1rem;
             align-self: flex-start;
             margin-right: 100px;
@@ -88,19 +93,15 @@ display: flex;
     }
    .boton:hover{ background-color: white;}
    .enviar{
-
-    padding-left: 1rem;
+padding-left: 1rem;
    }
     p{
         padding: 1rem;
         font-size: 20px;
         background-position: 10px;
         }
-
-
-    
-
-/*home*/
+        
+    /*home*/
 
 /*footer*/
 footer{ 
@@ -109,27 +110,26 @@ footer{
     justify-content: center;
     }
 .parrafo{ 
-    display: flex;
-    justify-content: center;
+    
     padding-top: 20px;
+    @include flex(flex, center);
 }
  
 .contenedor__redes{
-    display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content: center;
     img{
         height: 50px;
         padding: 10px;        
     }
+    @include flex(flex, center);
     
 }
 
 /*mujer*/
 .section1__mujer{
-    display: flex;
-    justify-content: space-between;
+    @include flex(flex, space-between);
+    
 }
 
 .section1__mujer img{
@@ -139,24 +139,19 @@ footer{
     padding: 20px;
 }
 .div__mujer1{
-    display: flex;
-    justify-content:space-between ;
+    @include flex(flex, space-between);
     height: 200px;
     margin: 1rem;
 }
 .div__mujer2{
-    display: flex;
-    justify-content:space-between ;
+    @include flex(flex, space-between);
     height: 200px;
     margin: 1rem;
 }
-
-
-
 /*hombre*/
+
 .hombre__1{
-    display: flex;
-    justify-content: space-between;
+    @include flex(flex, space-between);
 }
 
 .hombre__1 img{
@@ -164,37 +159,32 @@ footer{
 }
 
 .div__hombre1{
-    display: flex;
-    justify-content:space-between ;
+    @include flex(flex, space-between);
     height: 200px;
     margin: 1rem;
    
 }
 .div__hombre2{
-    display: flex;
-    justify-content:space-between;
+    @include flex(flex, space-between);
     height: 200px;
     margin: 1rem;
 }
 
 /*niño*/
 .niño__1{
-    display: flex;
-    justify-content: space-between;
+    @include flex(flex, space-between);
     img{
         height: 300px;
     }
 }
 
 .div__niño1{
-    display: flex;
-    justify-content:space-between ;
+    @include flex(flex, space-between);
     height: 200px;
     margin: 1rem;
 }
 .div__niño2{
-    display: flex;
-    justify-content:space-between ;
+    @include flex(flex, space-between);
     height: 200px;
     margin: 1rem;
 }
@@ -202,16 +192,14 @@ footer{
 /*novedades*/
 
 .novedades__1{ 
-    display: flex;
-    justify-content: space-around;
+    @include flex(flex, space-around);
     padding: 1rem;
     iframe{
         width: 1000px; height: 481px;}
         
 }
 #section__novedades{
-    display: flex;
-    justify-content: space-around;
+    @include flex(flex, space-around);
     img{ 
         height: 200px;
         margin: 1rem;
